docs(planning): add phase_02 YAML — ecosystem-wide UDS migration

--- a/docs/planning/manifest.json
+++ b/docs/planning/manifest.json
@@ -5,7 +5,6 @@
   "total_phases": 3,
   "completed_phases": [],
   "current_phase": "01",
-
   "active_context": {
     "critical_files": [
       "./docs/planning/AGENTS.md",
@@ -16,30 +15,38 @@
     "technical_debt_log": "./docs/planning/DEBT.md",
     "ecosystem_map": "NA"
   },
-
   "phase_map": {
     "00": "./docs/planning/phases/phase_00_init.yaml",
     "01": "./docs/planning/phases/phase_01_uds_definition.yaml",
     "02": "./docs/planning/phases/phase_02_ecosystem_migration.yaml",
     "03": "./docs/planning/phases/phase_03_automated_enforcement.yaml"
   },
-
   "ecosystem_context": {
     "masterplan": "https://github.com/nizamiq/nizamiq-strategy",
     "global_sequence": "This repository is the prerequisite for Phase 2 (Ecosystem Migration) and Phase 3 (Automated Enforcement) of the Documentation Unification Plan.",
     "blocked_by": [],
     "upstream_repos": [],
     "downstream_repos": [
-      "Aegis", "Atlas", "Recce", "anchorlink", "meridian",
-      "Fireside", "Cornerstone", "KubeClaw", "nizamiq.com",
-      "gateway-config", "sputnik-gateway", "nizamiq-methodology", "nizamiq-strategy"
+      "Aegis",
+      "Atlas",
+      "Recce",
+      "anchorlink",
+      "meridian",
+      "Fireside",
+      "Cornerstone",
+      "KubeClaw",
+      "nizamiq.com",
+      "gateway-config",
+      "sputnik-gateway",
+      "nizamiq-methodology",
+      "nizamiq-strategy"
     ]
   },
-
   "metadata": {
     "created_at": "2026-02-20",
     "created_by": "Manus AI",
     "last_modified": "2026-02-20",
     "last_modified_by": "Manus AI"
-  }
+  },
+  "next_phase": "02"
 }
