--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -1,6 +1,16 @@
 name: UDS Doc Lint
 
 on:
+  push:
+    branches: [main, master]
+    paths:
+      - '**/*.md'
+      - '.github/workflows/doc-lint.yml'
+  pull_request:
+    branches: [main, master]
+    paths:
+      - '**/*.md'
+      - '.github/workflows/doc-lint.yml'
   workflow_call:
 
 jobs:
