plan(protocol-0): add next phase YAML and update manifest.json
Protocol 0 Global Pre-Flight execution:
- Added next phase YAML file(s) for upcoming work
- Updated docs/planning/manifest.json with new phase_map entries and next_phase pointer
- Ecosystem DAG analysis complete: dependencies mapped and sequenced

Signed-off-by: Manus AI <manus@nizamiq.com>

--- a/docs/planning/manifest.json
+++ b/docs/planning/manifest.json
@@ -19,7 +19,8 @@
     "00": "./docs/planning/phases/phase_00_init.yaml",
     "01": "./docs/planning/phases/phase_01_uds_definition.yaml",
     "02": "./docs/planning/phases/phase_02_ecosystem_migration.yaml",
-    "03": "./docs/planning/phases/phase_03_automated_enforcement.yaml"
+    "03": "./docs/planning/phases/phase_03_automated_enforcement.yaml",
+    "04": "./docs/planning/phases/phase_04_ecosystem_wide_enforcement.yaml"
   },
   "ecosystem_context": {
     "masterplan": "https://github.com/nizamiq/nizamiq-strategy",
@@ -48,5 +49,5 @@
     "last_modified": "2026-02-20",
     "last_modified_by": "Manus AI"
   },
-  "next_phase": "02"
+  "next_phase": "04"
 }
