chore(protocol-0): set manifest status=PENDING (pre-flight PF-001)
Protocol 0 Pre-Flight PF-001 identified 11 repos with unset manifest status.
Setting status=PENDING to improve observability for execution agents.

Signed-off-by: Manus AI <manus@nizamiq.com>

--- a/docs/planning/manifest.json
+++ b/docs/planning/manifest.json
@@ -49,5 +49,8 @@
     "last_modified": "2026-02-20",
     "last_modified_by": "Manus AI"
   },
-  "next_phase": "04"
+  "next_phase": "04",
+  "status": "PENDING",
+  "last_updated": "2026-02-21",
+  "last_updated_by": "Protocol-0 Pre-Flight PF-001"
 }
