chore(planning): reconcile manifest and create missing planning docs [Protocol-01]

--- a/docs/planning/manifest.json
+++ b/docs/planning/manifest.json
@@ -3,8 +3,11 @@
   "version": "1.4.0",
   "baseline_mapped": true,
   "total_phases": 4,
-  "completed_phases": ["00", "01", "02", "03", "04"],
-  "current_phase": "04",
+  "completed_phases": [
+    "00",
+    "01"
+  ],
+  "current_phase": "02",
   "phase_04_status": "COMPLETE",
   "active_context": {
     "critical_files": [
@@ -15,7 +18,7 @@
       "./docs/dashboard/index.html",
       "./.github/workflows/doc-lint.yml"
     ],
-    "last_validated_step": "04.4",
+    "last_validated_step": "01.7",
     "technical_debt_log": "./docs/planning/DEBT.md",
     "ecosystem_map": "NA"
   },
@@ -26,7 +29,7 @@
     "All 13 repositories: PASS status (score >= 80%)",
     "nizamiq-strategy: 100% compliance (perfect score)",
     "Documentation health dashboard: docs/dashboard/index.html",
-    "Enforcement mode: WARN (non-blocking) — switch to FAIL at 90% compliance"
+    "Enforcement mode: WARN (non-blocking) \u2014 switch to FAIL at 90% compliance"
   ],
   "phase_map": {
     "00": "./docs/planning/phases/phase_00_init.yaml",
@@ -37,13 +40,23 @@
   },
   "ecosystem_context": {
     "masterplan": "https://github.com/nizamiq/nizamiq-strategy",
-    "global_sequence": "Phase 04 completes the UDS enforcement rollout. All 13 active repositories now have the doc-lint CI workflow. The ecosystem is in WARN mode — switch to FAIL mode when compliance reaches 90%.",
+    "global_sequence": "Phase 04 completes the UDS enforcement rollout. All 13 active repositories now have the doc-lint CI workflow. The ecosystem is in WARN mode \u2014 switch to FAIL mode when compliance reaches 90%.",
     "blocked_by": [],
     "upstream_repos": [],
     "downstream_repos": [
-      "Aegis", "Atlas", "Recce", "anchorlink", "meridian",
-      "Fireside", "Cornerstone", "KubeClaw", "nizamiq.com",
-      "gateway-config", "nizamiq-methodology", "nizamiq-strategy", "zitadel-config"
+      "Aegis",
+      "Atlas",
+      "Recce",
+      "anchorlink",
+      "meridian",
+      "Fireside",
+      "Cornerstone",
+      "KubeClaw",
+      "nizamiq.com",
+      "gateway-config",
+      "nizamiq-methodology",
+      "nizamiq-strategy",
+      "zitadel-config"
     ]
   },
   "metadata": {
@@ -53,7 +66,7 @@
     "last_modified_by": "Protocol-1 Wave-6 Execution Agent"
   },
   "next_phase": "COMPLETE",
-  "status": "PHASE_04_COMPLETE",
-  "last_updated": "2026-02-21",
-  "last_updated_by": "Protocol-1 Wave-6 Execution Agent"
+  "status": "IN_PROGRESS",
+  "last_updated": "2026-02-22",
+  "last_updated_by": "Protocol-01 Remediation Agent"
 }
