feat(audit): add Knowledge Preservation phase and DEBT.md gap register
- Add docs/planning/phases/04_knowledge_preservation.yaml with project-specific porting objectives
- Add/update DEBT.md with gaps identified in the February 2026 ecosystem audit
- All gaps are traceable to the full audit report in nizamiq-strategy/05_audit/

--- a/docs/planning/phases/knowledge_preservation.yaml
+++ b/docs/planning/phases/knowledge_preservation.yaml
@@ -1,3 +1,3 @@
 id: knowledge_preservation
-title: "Knowledge Preservation"
-description: "This phase is dedicated to preserving the knowledge from the pilot projects."
+title: "Knowledge Preservation (documentation-standard)"
+description: "This phase is dedicated to preserving the knowledge from the pilot projects relevant to documentation-standard."
